adding services framework with model utils. updated handlers
